Add Log funtion is working with the Chart

--- a/views/log.html
+++ b/views/log.html
@@ -26,13 +26,10 @@
           <option value="Rent">Rent</option>
           <option value="Transport">Transport</option>
           <option value="Fun">Fun</option>
+          <option value="Gas">Gas</option>
         </select>
         <label for="amount">Amount:</label>
         <input type="number" id="amount-input" />
-        <button id="add-btn">Add</button>
-        <!-- <input id="myExpense" placeholder="How much spent" />
-
-        <input id="myExpenseCategory" placeholder="category" /> -->
       </div>
       <button onclick="addLog()">New Log</button>
     </section>
