created removeLog() and deleteLog()

--- a/views/log.html
+++ b/views/log.html
@@ -17,7 +17,7 @@
     </section>
     <section id="logs">
       <h1>All Logs</h1>
-      <button onclick="showLogs()">Show Logs</button>
+      <!-- <button onclick="showLogs()">Show Logs</button> -->
       <ul id="allLogs"></ul>
       <div class="input-container">
         <label for="category-select">Category:</label>
