contact page done

--- a/views/contact.html
+++ b/views/contact.html
@@ -16,7 +16,16 @@
       <h1>MyTracker</h1>
     </section>
     <section id="logs">
-      <h1>Contacts</h1>
+      <h1>Contacts Us Here</h1>
+      <form class="formHolder">
+        <label>Name</label>
+        <input />
+        <label>Email</label>
+        <input />
+        <label>TextBox</label>
+        <input placeholder="What do you need?" />
+        <button class="subBtn" type="submit">Submit</button>
+      </form>
     </section>
     <script src="app.js"></script>
   </body>
