All styling is done and last bit of clean up

--- a/views/index.html
+++ b/views/index.html
@@ -20,7 +20,7 @@
         <canvas id="myChart"></canvas>
       </div>
     </section>
-    <section class="expense-display">
+    <!-- <section class="expense-display">
       <div class="expense-list">
         <h2>Expense List</h2>
         <table>
@@ -39,7 +39,7 @@
           </tfoot>
         </table>
       </div>
-    </section>
+    </section> -->
   </body>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="./chart.js"></script>
