--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -125,3 +125,48 @@ input {
   margin: 0 auto;
   margin-top: 20px;
 }
+
+.difInput {
+  height: 20px;
+  width: 250px;
+}
+
+ul {
+  /* background-color: antiquewhite; */
+  width: 300px;
+  align-items: center;
+  margin: 0 auto;
+}
+
+li{
+  font-size: 30px;
+}
+
+.input-container {
+  /* background-color: antiquewhite; */
+  display: flex;
+  justify-content: center;
+}
+
+.catDrip {
+  height: 45px;
+  width: 100px;
+  font-size: 25px;
+}
+
+.difInput {
+  height: 45px;
+  width: 100px;
+  font-size: 25px;
+}
+
+.newBtn {
+  height: 45px;
+  width: 100px;
+  font-size: 25px;
+  background-color: #A0D0F5;
+  border: none;
+  margin-top: 20px;
+  margin-left: 45%;
+  
+}
