--- a/views/log.html
+++ b/views/log.html
@@ -21,7 +21,7 @@
       <ul id="allLogs"></ul>
       <div class="input-container">
         <label for="category-select">Category:</label>
-        <select id="category-select">
+        <select class="catDrip" id="category-select">
           <option value="Food">Food</option>
           <option value="Rent">Rent</option>
           <option value="Transport">Transport</option>
@@ -29,9 +29,9 @@
           <option value="Gas">Gas</option>
         </select>
         <label for="amount">Amount:</label>
-        <input type="number" id="amount-input" />
+        <input class="difInput" type="number" id="amount-input" />
       </div>
-      <button onclick="addLog()">New Log</button>
+      <button class="newBtn" onclick="addLog()">New Log</button>
     </section>
     <script src="app.js"></script>
   </body>
